--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@color/gray"
+    android:background="@color/md_theme_light_onPrimary"
     tools:context=".MainActivity">
 
     <GridLayout
