--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="50dp"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@color/md_theme_light_onPrimary"
     tools:context=".MainActivity">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginBottom="50dp" >
+
+        <Button
+            android:id="@+id/buttonip"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Configurar pantallas" />
+
+        <Button
+            android:id="@+id/buttonmenu"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Configurar botones" />
+
+        <Button
+            android:id="@+id/buttonrefresh"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Refrescar conexion" />
+    </LinearLayout>
 
     <GridLayout
         android:layout_width="wrap_content"
