--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginBottom="50dp" >
+        android:layout_marginTop="45dp"
+        android:layout_marginBottom="75dp" >
 
         <Button
             android:id="@+id/buttonscreens"
@@ -26,11 +27,6 @@
             android:layout_height="50dp"
             android:text="Configurar botones" />
 
-        <Button
-            android:id="@+id/buttonrefresh"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:text="Refrescar conexion" />
     </LinearLayout>
 
     <GridLayout
