--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="50dp"
+    android:layout_marginTop="25dp"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginTop="45dp"
         android:layout_marginBottom="110dp" >
 
     </LinearLayout>
@@ -76,6 +75,39 @@
             android:layout_width="wrap_content"
             android:layout_height="100dp"
             android:text="MENU 9" />
+
+    </GridLayout>
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:columnCount="4"
+        android:layout_marginTop="50dp"
+        android:useDefaultMargins="true">
+
+        <Button
+            android:id="@+id/pantalla1"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:text="PANTALLA 1" />
+
+        <Button
+            android:id="@+id/pantalla2"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:text="PANTALLA 2" />
+
+        <Button
+            android:id="@+id/pantalla3"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:text="PANTALLA 3" />
+
+        <Button
+            android:id="@+id/pantalla4"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:text="PANTALLA 4" />
 
     </GridLayout>
 
