--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/additem"
+        android:icon="@drawable/add"
+        android:title="Añadir productos"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/menuitem"
         android:icon="@drawable/menuitem"
         android:title="Configurar botones"
