--- a/app/src/main/res/drawable/tvasset.xml
+++ b/app/src/main/res/drawable/tvasset.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:fillColor="#FFFFFF"
+      android:fillColor="?android:attr/colorControlNormal"
       android:pathData="M160,840v-80q-33,0 -56.5,-23.5T80,680v-440q0,-33 23.5,-56.5T160,160h640q33,0 56.5,23.5T880,240v440q0,33 -23.5,56.5T800,760v80h-40l-26,-80L227,760l-27,80h-40ZM160,680h640v-440L160,240v440ZM480,460Z"/>
 </vector>
