--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,54 +26,63 @@
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="MENU 1" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="MENU 2" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="MENU 3" />
 
         <Button
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="MENU 4" />
 
         <Button
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="MENU 5" />
 
         <Button
             android:id="@+id/button6"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="MENU 6" />
 
         <Button
             android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="MENU 7" />
 
         <Button
             android:id="@+id/button8"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="MENU 8" />
 
         <Button
             android:id="@+id/button9"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="MENU 9" />
 
     </GridLayout>
@@ -89,24 +98,28 @@
             android:id="@+id/pantalla1"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="PANTALLA 1" />
 
         <Button
             android:id="@+id/pantalla2"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="PANTALLA 2" />
 
         <Button
             android:id="@+id/pantalla3"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="PANTALLA 3" />
 
         <Button
             android:id="@+id/pantalla4"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:textColor="@color/md_theme_light_onPrimary"
             android:text="PANTALLA 4" />
 
     </GridLayout>
