--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,37 +90,16 @@
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:columnCount="4"
+        android:columnCount="1"
         android:layout_marginTop="50dp"
         android:useDefaultMargins="true">
 
         <Button
             android:id="@+id/pantalla1"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:textColor="@color/md_theme_light_onPrimary"
-            android:text="PANTALLA 1" />
-
-        <Button
-            android:id="@+id/pantalla2"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:textColor="@color/md_theme_light_onPrimary"
-            android:text="PANTALLA 2" />
-
-        <Button
-            android:id="@+id/pantalla3"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:textColor="@color/md_theme_light_onPrimary"
-            android:text="PANTALLA 3" />
-
-        <Button
-            android:id="@+id/pantalla4"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:textColor="@color/md_theme_light_onPrimary"
-            android:text="PANTALLA 4" />
+            android:text="ELEGIR PRODUCTOS" />
 
     </GridLayout>
 
