--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -12,9 +12,11 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_above="@id/buttonsLayout" />
 
     <GridLayout
+        android:id="@+id/buttonsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:columnCount="4"
