--- a/app/src/main/res/xml/menu_preferences.xml
+++ b/app/src/main/res/xml/menu_preferences.xml
@@ -3,58 +3,40 @@
     <PreferenceCategory app:title="@string/messages_header">
 
         <EditTextPreference
-            app:defaultValue="http://poster.com.ar/marito/"
+            app:defaultValue="http://supranet.ar/astor01, http://supranet.ar/astor02, http://supranet.ar/astor-pizza-comun, http://supranet.ar/astor-pizza-especial"
             app:key="button1_url"
             app:summary="Toque para cambiar el URL"
             app:title="Boton 1" />
 
         <EditTextPreference
-            app:defaultValue="http://poster.com.ar/vira/"
+            app:defaultValue="http://supranet.ar/astor-carne, http://supranet.ar/astor-sandwich-especial, http://supranet.ar/astor-sandwich-jamon, http://supranet.ar/astor-sandwich-palta"
             app:key="button2_url"
             app:summary="Toque para cambiar el URL"
             app:title="Boton 2" />
 
         <EditTextPreference
-            app:defaultValue="http://poster.com.ar/cassaro/"
+            app:defaultValue="http://supranet.ar/astor-burritos, http://supranet.ar/astor-focaccia, http://supranet.ar/astor-sandwich-varios, http://supranet.ar/cassaro"
             app:key="button3_url"
             app:summary="Toque para cambiar el URL"
             app:title="Boton 3" />
 
         <EditTextPreference
-            app:defaultValue="http://poster.com.ar/casino/"
+            app:defaultValue="http://supranet.ar/astor01, http://supranet.ar/astor02, http://supranet.ar/astor03, http://supranet.ar/cassaro"
             app:key="button4_url"
             app:summary="Toque para cambiar el URL"
             app:title="Boton 4" />
 
         <EditTextPreference
-            app:defaultValue="http://poster.com.ar/topssy5/"
+            app:defaultValue="http://supranet.ar/"
             app:key="button5_url"
             app:summary="Toque para cambiar el URL"
             app:title="Boton 5" />
 
         <EditTextPreference
-            app:defaultValue="http://poster.com.ar/pacifico/"
+            app:defaultValue="http://supranet.ar/"
             app:key="button6_url"
             app:summary="Toque para cambiar el URL"
             app:title="Boton 6" />
-
-        <EditTextPreference
-            app:defaultValue="http://supranet.ar/electrohobby/"
-            app:key="button7_url"
-            app:summary="Toque para cambiar el URL"
-            app:title="Boton 7" />
-
-        <EditTextPreference
-            app:defaultValue="http://poster.com.ar/center/"
-            app:key="button8_url"
-            app:summary="Toque para cambiar el URL"
-            app:title="Boton 8" />
-
-        <EditTextPreference
-            app:defaultValue="http://poster.com.ar/forno/"
-            app:key="button9_url"
-            app:summary="Toque para cambiar el URL"
-            app:title="Boton 9" />
 
     </PreferenceCategory>
 
