--- a/app/src/main/res/layout/activity_products_add.xml
+++ b/app/src/main/res/layout/activity_products_add.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
@@ -23,8 +24,10 @@
         android:layout_marginTop="@dimen/fab_margin"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
+        android:backgroundTint="@color/supranet"
         android:text="Añadir Producto"
         android:textColor="@color/md_theme_light_onPrimary"
-        android:backgroundTint="@color/supranet"/>
+        app:icon="@drawable/add"
+        app:iconTint="#FFFFFF" />
 
 </RelativeLayout>
