--- a/app/src/main/res/layout/activity_products_list.xml
+++ b/app/src/main/res/layout/activity_products_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
@@ -22,6 +23,38 @@
         android:columnCount="4"
         android:layout_alignParentBottom="true"
         android:useDefaultMargins="true">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieAnimationView"
+            android:layout_width="87dp"
+            android:layout_height="75dp"
+            app:lottie_rawRes="@raw/send"
+            app:lottie_autoPlay="false"
+            app:lottie_loop="false" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieAnimationView2"
+            android:layout_width="87dp"
+            android:layout_height="75dp"
+            app:lottie_rawRes="@raw/send"
+            app:lottie_autoPlay="false"
+            app:lottie_loop="false" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieAnimationView3"
+            android:layout_width="87dp"
+            android:layout_height="75dp"
+            app:lottie_rawRes="@raw/send"
+            app:lottie_autoPlay="false"
+            app:lottie_loop="false" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieAnimationView4"
+            android:layout_width="87dp"
+            android:layout_height="75dp"
+            app:lottie_rawRes="@raw/send"
+            app:lottie_autoPlay="false"
+            app:lottie_loop="false" />
 
         <ImageButton
             android:id="@+id/pantalla1"
